--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
   <div class="page-header">
-    <h1>Join the discussion!</h1>
+    <h1>Drop your message to Tecorb chat room!</h1> <small> Your message can be display by any member of the chat room.</small>
   </div>
 
   <%= render 'form' %>
