--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>MiniChat</title>
+  <title>Chat-Room</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -12,7 +12,7 @@
 <div class="navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to 'Mini-chat', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Tecorb-Chat-Room', root_path, class: 'navbar-brand' %>
     </div>
 
     <% if current_user %>
@@ -36,7 +36,7 @@
 
 <div id="footer">
   <div class="container">
-    <p class="text-muted">Created by <a href="http://radiant-wind.com" target="_blank">Radiant Wind</a></p>
+    <p class="text-muted">Created by <a href="https://www.facebook.com/jai.rajput.980" target="_blank">Tecorb - Jai Rajput(Software developer @Tecorb)</a></p>
   </div>
 </div>
 </body>
