--- a/app/views/comments/_welcome.html.erb
+++ b/app/views/comments/_welcome.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron">
-  <h1>Welcome to our mini-chat!</h1>
-  <p class="lead">Please sign in via one of the social networks to start chatting</p>
-  <%= link_to '', '/auth/twitter', class: 'social twitter' %>
+  <h2>Welcome to our Tecorb-chat-room!</h2>
+  <img src="/assets/chat-room.gif" width="100%"/>
+  <p class="lead">Please sign in via Facebook to start chatting</p>
+  <%#= link_to '', '/auth/twitter', class: 'social twitter' %>
   <%= link_to '', '/auth/facebook', class: 'social facebook' %>
 </div>
