--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
   <%= link_to image_tag(comment.user.avatar_url, alt: comment.user.name, class: "media-object"),
               comment.user.profile_url, target: '_blank', class: 'pull-left' %>
   <div class="media-body">
-    <h4 class="media-heading"><%= link_to comment.user.name, comment.user.profile_url, target: '_blank' %> says
+    <h4 class="media-heading"><%= link_to comment.user.name, comment.user.profile_url, target: '_blank' %>
       <small class="text-muted">[at <%= comment.created_at.strftime('%-d %B %Y, %H:%M:%S') %>]</small></h4>
     <p><%= comment.body %></p>
   </div>
